# Class_Raven

./: ()  .gitignore  README.md  _navbar.html  extra.html  index.css  log.txt  notes.txt  package-lock.json  post-bootcamp-project-ideas.md  register.html
0 General/: 01 Course Overview.md  02 Setup.md  (+1 more)
Code/Arek/Django/lab1/todo-lab/: pyproject.toml
Code/Arek/Django/lab1/todo-lab/tests/: test_todo_lab.py
Code/Arek/Django/lab1/todo-lab/todo/myapp/: admin.py  models.py  urls.py  views.py
Code/Arek/Django/lab1/todo-lab/todo/myapp/migrations/: 0001_initial.py
Code/Arek/Django/lab1/todo-lab/todo/todo/: settings.py  urls.py
Code/Arek/Django/lab2/django-lab2/: pyproject.toml
Code/Arek/Django/lab2/django-lab2/blog_lab/: manage.py
Code/Arek/Django/lab2/django-lab2/blog_lab/blog_lab/: asgi.py  settings.py  urls.py  wsgi.py
Code/Arek/Django/lab2/django-lab2/blog_lab/myapp/: admin.py  models.py  urls.py  views.py
Code/Arek/Django/lab2/django-lab2/blog_lab/myapp/migrations/: 0001_initial.py  0002_blogpost.py
Code/Arek/Django/lab2/django-lab2/tests/: test_django_lab2.py
Code/Arek/Django/lab3/pokedex-lab/: pyproject.toml
Code/Arek/Django/lab3/pokedex-lab/django_pokedex/: manage.py
Code/Arek/Django/lab3/pokedex-lab/django_pokedex/django_pokedex/: asgi.py  settings.py  urls.py  wsgi.py
Code/Arek/Django/lab3/pokedex-lab/django_pokedex/pokedex/: admin.py  models.py  urls.py  views.py
Code/Arek/Django/lab3/pokedex-lab/django_pokedex/pokedex/migrations/: 0001_initial.py  0002_pokemontype_pokemon.py
Code/Arek/Django/lab3/pokedex-lab/tests/: test_pokedex_lab.py
(+1957 files in other folders)
