[tool.poetry]
name = "todo-lab"
version = "0.1.0"
description = ""
authors = ["arek8675 <smullenarek10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
django = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
