[tool.poetry]
name = "django-lab2"
version = "0.1.0"
description = ""
authors = ["arek8675 <smullenarek10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
